--- a/application/pay/view/index/index.html
+++ b/application/pay/view/index/index.html
@@ -12,6 +12,7 @@
 <p><a href="{:url('queryOrder')}"> 微信订单查询</a></p>
 <p><a href="{:url('refund')}"> 微信订单退款</a></p>
 <p><a href="{:url('transfers')}"> 微信企业付款</a></p>
+<p><a href="{:url('location')}"> gg</a></p>
 <p>支付宝：</p>
 <p><a href="{:url('pay')}"> 支付宝即时到账</a></p>
 <p><a href="{:url('Alitransfer')}"> 支付宝转账</a></p>
