--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -25,6 +25,9 @@
 <p><a href="{:url('Phpexcel/out')}"> 导出</a></p>
 <p>高德地图</p>
 <p><a href="{:url('Amap/location')}">ip地址-->地理地址</a></p>
+<p>redis</p>
+<p><a href="{:url('Redis/test')}"> 测试redis</a></p>
+
 
 
 </body>
